Closed Bug 654710 Opened 15 years ago Closed 15 years ago

TI: [infer failure] Missing type at #2:00000 pushed 0: Shell.bindMethod

Categories

(Core :: JavaScript Engine, defect)

x86_64
Linux
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: decoder, Unassigned)

References

Details

(Keywords: crash, testcase)

The following testcase crashes on TI revision 3062ff7fef83 (run with -n -a), tested on 64 bit: var BUGNUMBER = 290488; function getBoundMethod() { return it.bindMethod("boundMethod", function () bindMethod*2 * bindMethod); } var func = getBoundMethod(); func();
bindMethod is a shell-only function which can reparent a function however it sees fit (emulating browser functionality I guess). This plays havoc with compileAndGo invariants, so this fix just has bindMethod throw if it is used on a non-compileAndGo script. http://hg.mozilla.org/projects/jaegermonkey/rev/c14db8ce8f48
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Er, the fix only has bindMethod throw if it is used on a compileAndGo script.
You need to log in before you can comment on or make changes to this bug.