[INFER] Don't use shell bindMethod function on non-compileAndGo scripts, bug 654710.